<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Akıllı Reklam Yönetim Sistemi</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="already_member">Already a member? Login</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="placeholder_email">example@example.com</string>
    <string name="placeholder_name">Example User</string>
    <string name="description_logo">Logo</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="firm_name">Firm Name</string>
    <string name="promotion_content">Promotion Content</string>
    <string name="promotion_duration">Promotion Duration</string>
    <string name="new_ad">New Ad</string>
    <string name="permission_fine_location_needed">Location permission must be granted</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_with_colon">%1$s: %2$s</string>
    <string name="dummy_latitude">Latitude:</string>
    <string name="dummy_longitude">Longitude:</string>
    <string name="list_promotions">List Promotions</string>
</resources>
